--- a/build.gradle
+++ b/build.gradle
@@ -21,19 +21,25 @@ repositories {
 }
 
 dependencies {
-
     // Lombok
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     testCompileOnly 'org.projectlombok:lombok:1.18.12'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
-
+    testImplementation('org.junit.jupiter:junit-jupiter:5.6.2')
 }
 
 application {
     // Define the main class for the application.
     mainClassName = 'com.caiodorn.nand2tetris.vm.VmTranslatorApp'
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
 
 jar {
